Create product with brand and measurement unit relation
